[package]
name = "networking-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
reqwest = { version = "0.13.4", features = ["json", "query"] }
rmcp = { version = "1.7.0", features = ["server", "transport-io", "macros", "schemars"] }
schemars = "1.2.1"
scraper = "0.27.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "macros"] }
tokio = { version = "1.52.3", features = ["full"] }
